Correções de enumeração de teorema versão não lembro

--- a/elementos-textuais/espacos-funcoes-mensuraveis.tex
+++ b/elementos-textuais/espacos-funcoes-mensuraveis.tex
@@ -11,7 +11,8 @@ Todas as definições e resultados aqui explorados, bem como nas demais seções
 Para que possamos estabelecer uma \enquote{medida} precisamos de um ambiente que permita ser \enquote{medido}. 
 Criamos um ambiente como este adicionando uma estrutura algébrica específica em um conjunto.
 Tal estrutura recebe o nome de $\sigma$-álgebra e é definida da seguinte forma:
-\begin{resultado}{Definição}
+
+\begin{env}{Definição}
 \label{def:sigma-algebra}
     Seja $X$ um conjunto não vazio. Uma família $\mathcal{C}$ de subconjuntos de $X$ é dita uma \sigal se as seguintes condições são atendidas:
     \begin{enumerate}[label*= (\roman*)]
@@ -20,42 +21,42 @@ Tal estrutura recebe o nome de $\sigma$-álgebra e é definida da seguinte forma
         \footnote{Em todo o texto, $X^c$ significa o \textit{complementar do conjunto} $X$.};
         \item Se $(A_n)$ é uma sequência de elementos de $\mathcal{C}$, 
         então $\displaystyle \bigcup_{j = 1}^\infty A_j \in \mathcal{C}$.
+        \vspace{-0.2cm}
     \end{enumerate}
-
-\end{resultado}
+\end{env}
 
 Com isso, um par ordenado $(X, \mathcal{C})$  constituído de um conjunto $X$ e uma \sigal sobre $X$ é chamado de  \textbf{espaço mensurável}.
 Além disso, cada elemento deste espaço é chamado de conjunto $\mathcal{C}-$mensurável.
 Quando não houver confusão ou quando a \sigal estiver fixada, dizemos simplesmente que cada elemento é um conjunto mensurável. 
 Observe que a terceira condição da definição \ref{def:sigma-algebra} nos diz que a união enumerável é um elemento da $\sigma$-álgebra.
-Logo, para um número finito $A_1, A_2, ..., A_n$ com $n \in \N$ de elementos $\cc$-mensuráveis de uma \sigal $\cc$, a união $\displaystyle \bigcup_{j = 1}^n A_j$ também será um elemento $\cc$-mensurável.
-\begin{resultado}{Observação}
-	Em todo o texto, indicaremos por $I_n$ o conjunto dos $n$ primeiros números naturais. 
-	Assim, $I_n = \{k \in \N; 1 \leq k \leq n\}$.
-\end{resultado}
+Logo, para um número finito $A_1, A_2, ..., A_n$ com $n \in \N$ de elementos $\cc$-mensuráveis de uma \sigal $\cc$, a união $\displaystyle \bigcup_{j \in I_n} A_j$ também será um elemento $\cc$-mensurável.
 
+\begin{env}{Observação}
+	Em todo o texto, indicaremos por $I_n$ o conjunto dos $n$ primeiros números naturais, isto é, $I_n = \{k \in \N; 1 \leq k \leq n\}$.
+	\vspace{-0.2cm}
+\end{env}
 % Exemplos de Sigmas Algebras 
-
-\begin{resultado}{Exemplo}
+\begin{env}{Exemplo}
     Seja $X = \{-1,0,1\}$. Se considerarmos $\mathcal{C} = \{\varnothing, X, \{0\}, \{-1,1\}\}$, temos que $(X, \mathcal{C})$ é um espaço mensurável.
-\end{resultado}
-
-\begin{resultado}{Exemplo}
+    \vspace{-0.2cm}
+\end{env}
+%
+\begin{env}{Exemplo}
 	\label{ex:sigma-trivial}
 	Seja $X$ um conjunto qualquer.
 	O conjunto $\mathcal{C}_1 = \{\varnothing, X\}$ é uma \sigal de $X$.
 	De fato, podemos observar que, nesse exemplo, todas as condições impostas na definição \ref{def:sigma-algebra} são atendidas de maneira trivial, pois 
 	$\varnothing$ e $X$ são todos os elementos de $\mathcal{C}_1$. 
 	Assim,  $(X, \mathcal{C}_1)$ é um espaço mensurável.
-	
-\end{resultado}
-%
-\vspace{-0.2cm}Perceba que a definição \ref{def:sigma-algebra} não nos diz que uma \sigal de um conjunto é única.
+\vspace{-0.2cm}
+\end{env}
+
+	Perceba que a \ref{def:sigma-algebra} não nos diz que uma \sigal de um conjunto é única.
 Realmente, não é. 
 Assim, um conjunto pode gerar espaços mensuráveis diferentes a depender da \sigal adotada.
 Para evidenciar essa percepção, observe o exemplo a seguir:
 
-\begin{resultado}{Exemplo}
+\begin{env}{Exemplo}
 	\label{ex:sigma-subconjuntos}
 	Seja $X$ conforme o exemplo anterior.
 	Considere, agora, o conjunto $\mathcal{C}_2 = \{ A; \ A \subset X\}$, ou seja, o conjunto formado por todos os subconjuntos do conjunto $X$
@@ -69,66 +70,67 @@ Para evidenciar essa percepção, observe o exemplo a seguir:
 	$\displaystyle \bigcup_{j = 1}^\infty A_j$ é composta por elementos de $X$.
 	Logo,  $\displaystyle \bigcup_{j = 1}^\infty A_j \in \mathcal{C}_2$.
 	Com isso, $\mathcal{C}_2$ também é uma \sigal de $X$ e o par $(X, \mathcal{C}_2)$ é um espaço mensurável que, por sua vez, é diferente do espaço $(X,\mathcal{C}_1)$.
-\end{resultado}
-
-
-
+	\vspace{-0.2cm}
+\end{env}
 
 % Como todo estudo de matemática, após vermos definição e exemplos precisamos aprofundar-nos na natureza do objeto que estamos estudando.
 % Partindo deste ponto, vamos dar início a uma sequencia de proposições que servirão como ferramenta para caracterizações futuras dos espaços mensuráveis.
-
 Os exemplos apresentados acima são todos de conjuntos que são uma \sigal de um conjunto $X$ arbitrário.
 Por definição, o conjunto $\mathcal{C}$ é composto de subconjuntos do conjunto $X$. 
 Será que se construirmos $Z$ um conjunto que contenha $\varnothing$ e $X$ e outros subconjuntos do conjunto $X$ tomados aleatoriamente teremos $(X,Z)$ um espaço mensurável? A resposta é negativa e para convencê-lo disso, mostraremos o seguinte contra-exemplo.
 
 %Contra Exemplo
-\begin{resultado}{Contraexemplo}
+\begin{env}{Contraexemplo}
     Seja $X = \{x,y,z\}$. O conjunto $\mathcal{C} = \{\varnothing, X, \{x\}, \{y\}, \{z\}\}$ não é uma \sigal de X.
-\end{resultado}
+    Sem dúvida, $\varnothing, X \in \mathcal{C}$. 
+    Entretanto, perceba que $\{x\} \in \mathcal{C}$, mas $\{x\}^c \notin \mathcal{C}$.
+    De fato, 
+    $
+    \{x\}^c
+    =\{x,y,z\} 
+    -\{x\} 
+    = \{y,z\}.
+    $
+    Entretanto, $\{y,z\} \notin \mathcal{C}$.
+    Assim, a segunda condição da definição \ref{def:sigma-algebra} não é satisfeita, impossibilitando que $\mathcal{C}$ seja uma \sigal de $X$.
+    \vspace{-0.2cm}
+\end{env}
 
-Sem dúvida, $\varnothing, X \in \mathcal{C}$. 
-Entretanto, perceba que $\{x\} \in \mathcal{C}$, mas $\{x\}^c \notin \mathcal{C}$.
-De fato, 
-$
-\{x\}^c
-=\{x,y,z\} 
--\{x\} 
-= \{y,z\}.
-$
-Entretanto, $\{y,z\} \notin \mathcal{C}$.
-Assim, a segunda condição da definição \ref{def:sigma-algebra} não é satisfeita, impossibilitando que $\mathcal{C}$ seja uma \sigal de $X$.
 A proposição adiante nos mostra como podemos induzir uma \sigal com um conjunto fixado não vazio em um conjunto.
 
 % Assim, pode ser preciso construir uma \sigal em algum momento com um conjunto $A$ específico.
 % A proposição adiante nos mostra como isso pode ser feito:
 
-\begin{resultado}{Proposição}
+\begin{env}{Proposição}
 \label{prop:sigma-complementar}
     Seja $X$ e $A$ dois conjuntos quaisquer com $A \neq \varnothing$.
     Se $A \subset X$, então o conjunto 
     $\mathcal{C}=\{\varnothing, X, A, A^c\}$ é uma \sigal de $X$.
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
 
 \begin{prova}
     Perceba que as condições \textit{(i)} e \textit{(ii)} da definição \ref{def:sigma-algebra} são satisfeitas pela forma que o conjunto  $\mathcal{C}$ foi construído. Para verificar a última condição, basta perceber $A \cup A^c = X$. Portanto, $\mathcal{C}$ é uma \sigal de $X$ para qualquer que seja $ \varnothing \neq A \subset X$.
 \end{prova}
 
-\begin{resultado}{Exemplo}
+\begin{env}{Exemplo}
     Considere $X = \N$. 
     Sejam $P =\{2k; \ k \in \N\}$ e $I = \{2k - 1;\ k \in \N\}$. 
     Como $P^c = I$, então $\mathcal{C} = \{\varnothing, \N, P, I\}$ é uma \sigal de $\N$ pela proposição anterior.
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
  
 Note que a definição \ref{def:sigma-algebra} trata apenas da reunião de enumerável de elementos da $\sigma$-álgebra. 
 Nosso interesse, agora, é investigar se conseguirmos propriedades análogas para a operação de interseção. 
 Iniciaremos verificando o comportamento de interseção de elementos de uma \sigal com a seguinte proposição.
 % Propriedades de Interseção 
 
-\begin{resultado}{Proposição}
+\begin{env}{Proposição}
 \label{prop:interseção-elementos-sigmas}
     Seja $(X, \cc)$ um espaço mensurável.
     Se $(A_j)$ é uma sequência  de conjuntos $\mathcal{C} $-mensuráveis, então $\displaystyle \bigcap_{j = 1}^\infty A_j$ é um elemento $\mathcal{C}$-mensurável.
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
 \begin{prova}
     Se $A_j \in \mathcal{C}$ para todo $j \in \N$, então cada complementar $A_j^c \in \mathcal{C}$, pois $\mathcal{C}$ é $\sigma$-álgebra. 
     Assim, $(A_j^c)$ forma uma sequência de conjuntos $\mathcal{C}$-mensuráveis acarretando que 
@@ -157,11 +159,11 @@ Sabendo que a menor \sigal é gerada por meio de intersecções é natural quest
 Responderemos à esta pergunta com a proposição adiante.
 
 %Interseção de Sigmas algebras
-\begin{resultado}{Proposição}
+\begin{env}{Proposição}
 \label{prop:interseção-2sigmas}
     Se $\mathcal{C}_1$ e $\mathcal{C}_2$ são duas \sigals de um conjunto $X$, então $\mathcal{C} = \mathcal{C}_1 \cap \mathcal{C}_2$ também é uma \sigal do conjunto $X$.
-\end{resultado}
-
+    \vspace{-0.2cm}
+\end{env}
 \begin{prova}
     Se $\mathcal{C}_1$ e $\mathcal{C}_2$ são \sigals de $X$, então ambos possuem $\varnothing$ e $X$ como elementos.
     Assim, $\varnothing$ e $X$ estão na intersecção $\mathcal{C}$.
@@ -176,12 +178,12 @@ Responderemos à esta pergunta com a proposição adiante.
     Portanto, $\mathcal{C}$ é uma \sigal de $X$.
 \end{prova}
 
-\begin{resultado}{Proposição}
+\begin{env}{Proposição}
 \label{prop:interseção-sigmas}
     Seja $(\mathcal{C}_j)$ uma sequência finita de $\mathcal{C}_j$-álgebras de um conjunto $X$, então 
     $\mathcal{C} = \displaystyle \bigcap_{j =1}^n\mathcal{C}_j$, com $n \geq 2$, também é uma \sigal do conjunto $X$.
-    
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
 \begin{prova}
     Provaremos esse resultado utilizando o método da indução finita sobre $n$.
     Se $n = 2$, o resultado é verificado imediatamente pela proposição \ref{prop:interseção-2sigmas}.
@@ -202,13 +204,13 @@ A primeira trata de conjuntos mensuráveis de uma \sigal e a outra refere-se à 
 Além disso, perceba que até aqui trabalhamos o conceito de \sigal de maneira abstrata sendo utilizada em um conjunto qualquer. 
 Trataremos, agora, de uma \sigal extremamente importante e específica para o conjunto $\R$ dos números reais.
 
-\begin{resultado}{Definição}
+\begin{env}{Definição}
 \label{def:algebra-borel}
     Seja $X = \R$. A Álgebra de Borel é a \sigal $\borel$ gerada por todos os intervalos abertos $(-\infty,x)$ com $ x  \in \R$. 
     Os elementos dessa \sigal são chamados de Borelianos.
     \index{Álgebra de Borel}
-
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
 
 Esta \sigal é extremamente relevante para os estudos de medida e integração e pode ser definida de várias formas diferentes, mas todas são equivalentes.
 Isso quer dizer que $(-\infty, x)$ não é a única forma dos elementos de $\borel$. 
@@ -222,7 +224,7 @@ Por exemplo, utilizando a reta real, podemos representar intervalo $(-\infty, b)
 % Imagem da decomposição de intervalos.
 \begin{figure}[h!]
 	\centering
-	\Caption{\label{fig:boreliano} Representação do intervalo $(-\infty, b)$ na reta real}	
+	\Caption{\label{fig:intervalo de infinito ate b} Intervalo $(-\infty, b)$ }	
 	\UECEfig{}{
 	    \begin{tikzpicture}
 	    	\draw[thick] (-5, -1) rectangle (5, 1);
@@ -277,13 +279,12 @@ Se tomarmos um $a \in \R$ fixo, com $a<b$, então a decomposição do intervalo 
 	    \Fonte{Elaborado pelo autor}
 	}	
 \end{figure}\\
-
 A decomposição de intervalos reais pela união de outros é relevante para mostrar a seguinte equivalência sobre a \sigal de Borel.\\
-\begin{resultado}{Teorema}
+\begin{env}{Teorema}
 \label{teo:equiv-borel}
     Uma \sigal é de Borel  se, e somente se, é gerada por intervalos do tipo $(a,b)$ com $a,b \in \R$.
-\end{resultado}
-
+    \vspace{-0.2cm}
+\end{env}
 \begin{prova}
    Suponha que $(\R,\borel)$ é um espaço mensurável. 
    Sejam $a$ e $b$ números reais, com $a<b$.
@@ -316,12 +317,9 @@ A decomposição de intervalos reais pela união de outros é relevante para mos
 	Só que $\displaystyle \bigcup_{n = 1}^\infty (-n,b) = (-\infty, b)$.
 	Com isso, os elementos de $\mathcal{C}$ são do tipo $(-\infty, b)$.
 	Portanto, $\mathcal{C} = \borel$.
-
 \end{prova}
 
 \section{Funções Mensuráveis}
-
-
 Agora que já estamos familiarizados com os conceitos de \sigal e espaços mensuráveis, vamos aplicar, sobre este espaço uma função e estudar seu comportamento
 %
 \footnote{Em todo o texto função e aplicação são sinônimos.}.
@@ -329,18 +327,18 @@ Agora que já estamos familiarizados com os conceitos de \sigal e espaços mensu
 Iniciaremos tratando de funções reais e estenderemos o conceito conforme haja necessidade.
 A partir de agora fixemos que, quando não houver menção contrária, $X$ será um conjunto qualquer diferente de $\varnothing$ e $\mathcal{C}$ será uma \sigal desse conjunto. 
 
-\begin{resultado}{Definição}
+\begin{env}{Definição}
 	\label{def:mensurabilidade-funções-reais}
     Uma função $f: X \to \R $ é dita $\mathcal{C}$-mensurável se, para cada $\alpha \in \R$, o conjunto $\{x \in X;\ f(x) > \alpha\} \in \mathcal{C}$.
-\end{resultado}
-
+    \vspace{-0.2cm}
+\end{env}
 % Exemplos de Funções mensuráveis
-
-\begin{resultado}[Função Constante]{Exemplo}
+\begin{env}{Exemplo}
 \label{ex:funcao-constante}
 	Seja $K \in \R$ um número fixado. 
 	A função $f: X \to \R$ definida por $f(x) = K$, para todo $x \in \R$  é $\cc$-mensurável.
-\end{resultado}
+	\vspace{-0.2cm}
+\end{env}
 Para mostrarmos este fato, precisamos analisar os casos de $\alpha$.
 Assim
 	\begin{enumerate}[label*= (\Roman*)]
@@ -350,8 +348,7 @@ Assim
 	\end{enumerate}
 Em todo caso, para todo $\alpha \in \R$, o conjunto  $\{x \in X;\ f(x) > \alpha\} \in \mathcal{C}$.
 Portanto, a função constante $f$ é $\cc$-mensurável.
-
-\begin{resultado}[Função Característica]{Exemplo}
+\begin{env}{Exemplo}
     Seja $(X, \mathcal{C})$ uma espaço mensurável e $A \in \mathcal{C}$.
     A função característica \footnote{As vezes também é chamada  função indicadora.} de $A$ 
     $\chi_A: X \to \{0,1\}$ definida por 
@@ -361,7 +358,8 @@ Portanto, a função constante $f$ é $\cc$-mensurável.
     \end{array}\right.
     $$
     é $\cc$-mensurável.
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
 
 Para verificar se $X_A$ é $\cc$-mensurável precisamos, novamente, analisar os casos de $\alpha \in \R$.
 	\begin{enumerate}[label*= (\Roman*)]
@@ -370,105 +368,109 @@ Para verificar se $X_A$ é $\cc$-mensurável precisamos, novamente, analisar os 
 		\item  se $\alpha < 0$, podemos notar que o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = X$, pois para qualquer que seja $x \in X$, os valores $\chi_A(x) \geq 0$.
 	\end{enumerate}
 Em todo o caso, vemos que o conjunto $\{x \in X; \chi_A(x)>  \alpha\}$ é um elemento de $\mathcal{C}$, pois $\varnothing, X$ e $A$ são elementos de $\mathcal{C}$. Portanto, a função característica $\chi_A(x)$ é $\cc$-mensurável.
-\begin{resultado}{Exemplo}
+\begin{env}{Exemplo}
 \label{ex:função-continua-mensuravel}
     Considere o espaço mensurável $(\R, \borel)$. Toda função $f: \R \to \R$ contínua é Borel mensurável.
-\end{resultado}
+    \vspace{-0.2cm}
+\end{env}
+
 	Para mostrar a validade do exemplo acima, precisamos de resultados auxiliares que encontraremos em \cite{elon}.
 	Um deles é a proposição abaixo.
-\begin{resultado}{Proposição}
+	\vspace{-0.2cm}
+\begin{env}{Proposição}
 \label{cit:função-continua-mensuravel}
 	Suponha que $f:X \to \R$ seja contínua em todos os pontos de $X$.
 	Se $X \subset \R$ é um aberto
 	\footnote{Em caso de dúvida sobre o que é um subconjunto $X$ de $\R$ aberto, consulte \supercite{elon}{p.164}.}, então o conjunto $A = \{a \in X;\ f(a)>k\}$ é um aberto (p.226).
-\end{resultado}
-
+	\vspace{-0.2cm}
+\end{env}
 	Além disso, em \supercite{elon}{p.167}, encontramos o seguinte teorema:
-	
-	\begin{resultado}{Teorema}[Estrutura de abertos da reta]
+	\begin{env}{Teorema}
 		\label{teo:estrutura-abertos-reta}
 		Todo subconjunto aberto $A \subset R$ se exprime, de modo único, como um reunião enumerável de intervalos abertos dois a dois disjuntos.
-	\end{resultado}
-	
+		\vspace{-0.2cm}
+	\end{env}
+
 	Segue disso que o
 	$\{x \in \R; f(x) > \alpha\} = \displaystyle \bigcup_{j = 1}^\infty A_n$ onde cada $A_n$ é um intervalo aberto, ou seja, $A_n \in \borel$ para todo $n \in \N$.
-	Com isso, pela definição \ref{def:sigma-algebra}, o conjunto $\{x \in \R; f(x) > \alpha\} \in \borel$.
+	Com isso, pela \ref{def:sigma-algebra}, o conjunto $\{x \in \R; f(x) > \alpha\} \in \borel$.
 	Portanto, qualquer função contínua $f: \R \to \R$ é Borel mensurável.
-
-
-    Lembre que ao apresentarmos a Álgebra de Borel (definição \ref{def:algebra-borel}), mostramos no teorema \ref{teo:equiv-borel} que há mais de uma maneira de definir os borelianos.
+    Lembre que ao apresentarmos a Álgebra de Borel (\ref{def:algebra-borel}), mostramos no \ref{teo:equiv-borel} que há mais de uma maneira de definir os borelianos.
     Para uma função $f: X \to \R$ $\cc$-mensurável, também podemos definir uma função $\cc$-mensurável por meio de conjuntos diferentes conforme o seguinte teorema.
-
-\begin{resultado}{Teorema}
+\begin{env}{Teorema}
 \label{teo:equiv-funcoes-mensuraveis}
     Sendo $(X,\mathcal{C})$ um espaço mensurável, para uma função $f: X \to \R$ $\cc$-mensurável as seguintes afirmações são equivalentes:
-    \begin{multicols}{2}
-        
-    \begin{enumerate}[label=(\alph*)]
-        \item $\forall \ \alpha \in \R, \ A_\alpha =\{x \in X;\ f(x) > \alpha \} \in \mathcal{C}$;
-        \item $\forall \ \alpha \in \R, \ B_\alpha =\{x \in X;\ f(x) \leq \alpha \} \in \mathcal{C}$;
-        \item $\forall \ \alpha \in \R, \ C_\alpha =\{x \in X;\ f(x) \geq \alpha \} \in \mathcal{C}$;
-        \item $\forall \ \alpha \in \R, \ D_\alpha =\{x \in X;\ f(x) < \alpha \} \in \mathcal{C}$.
-    \end{enumerate}
+    \vspace{-0.4cm}
+    \begin{multicols}{2}    	
+	    \begin{enumerate}[label=(\alph*)]
+	        \item $\forall \ \alpha \in \R, \ A_\alpha =\{x \in X;\ f(x) > \alpha \} \in \mathcal{C}$;
+	        \item $\forall \ \alpha \in \R, \ B_\alpha =\{x \in X;\ f(x) \leq \alpha \} \in \mathcal{C}$;
+	        \item $\forall \ \alpha \in \R, \ C_\alpha =\{x \in X;\ f(x) \geq \alpha \} \in \mathcal{C}$;
+	        \item $\forall \ \alpha \in \R, \ D_\alpha =\{x \in X;\ f(x) < \alpha \} \in \mathcal{C}$.
+	    \end{enumerate}
      \end{multicols}
-
-\end{resultado}
-
+	\vspace{-0.2cm}
+\end{env}
 \begin{prova}
     Dividiremos esta demonstração em três partes. A estratégia será mostrar que a afirmação $(a)$ é equivalente à afirmação $(b)$; depois que a afirmação $(c)$ é equivalente à afirmação $(d)$ ; e por fim que a firmação $(a)$ ocorre se, e somente se, a afirmação $(c)$ ocorre. 
     \begin{enumerate}[label* = (\Roman*)]
         \item Suponha a validade da afirmação $(a)$. Se $A_\alpha \in \mathcal{C}$, então $A_\alpha^c \in \mathcal{C}$, pela definição de $\mathcal{C}$-álgebra.
-    Perceba que 
-    $$
-    x \in A_\alpha^c \Leftrightarrow   x \notin A_\alpha\\
-    \Leftrightarrow  x \in X \textrm{\ e \ } f(x) \leq \alpha, \forall\ \alpha \in \R
-    \Leftrightarrow x \in B_\alpha    
-	$$ Assim, um elemento está em $A_\alpha^c$ se, e somente se, está em $B_\alpha$. Segue que $A_\alpha^c = B_\alpha$. Logo, $B_\alpha$ é elemento de $\mathcal{C}$.
-	\item Para mostrar a equivalência entre as afirmações $(c)$ e $(d)$ utilizamos um argumento totalmente análogo à parte $(I)$, pois se $x \notin C_\alpha$, então $f(x) < \alpha$ acarretando que $x \in D_\alpha$ e vice-versa.
-	\item Suponha que $A_\alpha \in \mathcal{C}$. Tome a sequência $\left(A_{\alpha -\frac{1}{n}}\right)$. Claramente, cada $A_{\alpha - \frac{1}{n}}$ é um elemento de $\mathcal{C}$ por definição.
-	Logo, pela proposição \ref{prop:interseção-elementos-sigmas}, a interseção $\displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}} \in \mathcal{C}$. Além disso, note que 
-\begin{align*}
-    x \in \displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}}
-    \Leftrightarrow & x \in A_{\alpha - \frac{1}{n}}, \forall \ n \in \N\\
-    \Leftrightarrow & f(x)> \alpha -\dfrac{1}{n},  \ \forall \ n \in \N\\
-    \Leftrightarrow &\lim_{n \to \infty} f(x) \geq \lim_{n \to \infty} \left(\alpha - \dfrac{1}{n}\right)\\
-    \Leftrightarrow & f(x) \geq \alpha \\
-    \Leftrightarrow & x \in C_\alpha
-\end{align*}
-    \end{enumerate}
-Desta forma, $C_\alpha = \displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}} $. Logo $C_\alpha \in \mathcal{C}$ como queríamos.
-
-Reciprocamente, suponha que $C_\alpha \in \mathcal{C}$. Tomemos a sequência $\left(C_{\alpha + \frac{1}{n}}\right)$.
-Cada elemento $C_{\alpha +\frac{1}{n}} \in \mathcal{C}$ por definição.
-Assim, pela definição de \sigal, 
-$\displaystyle \bigcup_{n = 1}^\infty C_{\alpha +\frac{1}{n}} \in \mathcal{C}$. Com isso, temos que
-\begin{align*}
-    x \in \displaystyle \bigcup_{n = 1}^\infty C_{\alpha +\frac{1}{n}}
-    \Leftrightarrow & x \in C_{\alpha + \frac{1}{n_0}}, \textrm{\ para algum  $n_0 \in \N$ }\\
-    \Leftrightarrow & f(x)\geq \alpha +\dfrac{1}{n_0}\\
-    \Leftrightarrow & f(x) > \alpha \\
-    \Leftrightarrow & x \in A_\alpha
-\end{align*}
-Assim, $\displaystyle \bigcup_{n = 1}^\infty C_{\alpha +\frac{1}{n}} = A_\alpha$. Logo, $A_\alpha \in \mathcal{C}$.
-Portanto, segue de $(I), (II)$ e $(III)$ que as afirmações $(a), (b), (c)$ e $(d)$ são todas equivalentes.
-
-
+	    Perceba que 
+	    $$
+	    x \in A_\alpha^c \Leftrightarrow   x \notin A_\alpha\\
+	    \Leftrightarrow  x \in X \textrm{\ e \ } f(x) \leq \alpha, \forall\ \alpha \in \R
+	    \Leftrightarrow x \in B_\alpha    
+		$$ Assim, um elemento está em $A_\alpha^c$ se, e somente se, está em $B_\alpha$. Segue que $A_\alpha^c = B_\alpha$. Logo, $B_\alpha$ é elemento de $\mathcal{C}$.
+		\item Para mostrar a equivalência entre as afirmações $(c)$ e $(d)$ utilizamos um argumento totalmente análogo à parte $(I)$, pois se $x \notin C_\alpha$, então $f(x) < \alpha$ acarretando que $x \in D_\alpha$ e vice-versa.
+		\item Suponha que $A_\alpha \in \mathcal{C}$. Tome a sequência $\left(A_{\alpha -\frac{1}{n}}\right)$. Claramente, cada $A_{\alpha - \frac{1}{n}}$ é um elemento de $\mathcal{C}$ por definição.
+		Logo, pela \ref{prop:interseção-elementos-sigmas}, a interseção $\displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}} \in \mathcal{C}$.
+		Além disso, note que 
+		\begin{equation}
+			x \in \displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}}
+			\Leftrightarrow
+		 	x \in A_{\alpha - \frac{1}{n}}, \forall \ n \in \N
+			\Leftrightarrow
+			f(x)> \alpha -\dfrac{1}{n},  \ \forall \ n \in \N
+		\end{equation}
+		Como cada $f(x) \in \R$, temos que
+		\begin{equation}
+			\lim_{n \to \infty} f(x) \geq \lim_{n \to \infty} \left(\alpha - \dfrac{1}{n}\right)
+			\Leftrightarrow
+			f(x) \geq \alpha
+			\Leftrightarrow
+			x \in C_\alpha
+		\end{equation}
+		Segue das equivalências (1) e (2) que $C_\alpha \Leftrightarrow \displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}}$
+		acarretando que $C_\alpha = \displaystyle \bigcap_{n = 1}^\infty A_{\alpha -\frac{1}{n}} $.
+		Portanto $C_\alpha \in \mathcal{C}$ como queríamos.
+   \end{enumerate}
+	
+		Reciprocamente, suponha que $C_\alpha \in \mathcal{C}$. Tomemos a sequência $\left(C_{\alpha + \frac{1}{n}}\right)$.
+		Cada elemento $C_{\alpha +\frac{1}{n}} \in \mathcal{C}$ por definição.
+		Assim, pela definição de \sigal, 
+		$\displaystyle \bigcup_{n = 1}^\infty C_{\alpha +\frac{1}{n}} \in \mathcal{C}$. Com isso, temos que
+		\begin{align*}
+		    x \in \displaystyle \bigcup_{n = 1}^\infty C_{\alpha +\frac{1}{n}}
+		    \Leftrightarrow & x \in C_{\alpha + \frac{1}{n_0}}, \textrm{\ para algum  $n_0 \in \N$ }\\
+		    \Leftrightarrow & f(x)\geq \alpha +\dfrac{1}{n_0}\\
+		    \Leftrightarrow & f(x) > \alpha \\
+		    \Leftrightarrow & x \in A_\alpha
+		\end{align*}
+		Assim, $\displaystyle \bigcup_{n = 1}^\infty C_{\alpha +\frac{1}{n}} = A_\alpha$. Logo, $A_\alpha \in \mathcal{C}$.
+		Portanto, concluímos de $(I), (II)$ e $(III)$ que as afirmações $(a), (b), (c)$ e $(d)$ são todas equivalentes.
 \end{prova}
 
 % Aritmética de Funções mensuráveis
-Perceba que mesmo na presença do teorema \ref{teo:equiv-funcoes-mensuraveis} acima, mostrar que uma função é mensurável é trabalhoso e repetitivo uma vez que, geralmente, é preciso verificar os casos de $\alpha$.
+Perceba que mesmo na presença do \ref{teo:equiv-funcoes-mensuraveis}, mostrar que uma função é mensurável é trabalhoso e repetitivo uma vez que, geralmente, é preciso verificar os casos de $\alpha$.
 Com o intuito de otimizar a identificação de uma função mensurável, veremos o comportamento de operações aritméticas entre funções mensuráveis.
-
-
-%%
-% PAREI A CORREÇÃO AQUI!!
-%%
-\begin{resultado}{Proposição}
+%
+\begin{env}{Proposição}
 \label{prop:aritmetica-uma-funcao}
 Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as funções $cf$, $f^2$ e $|f|$ são $\cc$-mensuráveis. 
-\end{resultado}
-
+\vspace{-0.2cm}
+\end{env}
 \begin{prova}
+	\vspace{-0.8cm}
     \begin{enumerate}[label*=(\alph*)]
         \item Mostraremos que $cf$ é $\cc$-mensurável para todos os casos possíveis do número real $c \in \R$.
             \begin{enumerate}[label=(\roman*)]
@@ -490,7 +492,7 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
                 Assim, o conjunto $\{x \in X; cf(x) > \alpha \} = \left\{x \in X; f(x) < -\dfrac{\alpha}{z}\right\}$.
                 Desta forma, o conjunto  $\left\{x \in X; f(x) < -\dfrac{\alpha}{z}\right\}  \in \mathcal{C}$ pelo  item $(d)$ do teorema \ref{teo:equiv-funcoes-mensuraveis}. Portanto,  $cf$ é $\cc$-mensurável em todos os casos de $c \in \R$.
             \end{enumerate}
-            
+        %  
         \item Para mostrar a mensurabilidade de $f^2$ é também necessário analisar os casos de $\alpha$.
             \begin{enumerate}[label = (\roman*)]
                 \item Se $\alpha < 0$, então $\{x \in X; [f(x)]^2 > \alpha\} = X$, pois $[f(x)]^2 \geq 0$ para todo $x \in X$.
@@ -499,14 +501,15 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
                 Assim, um elemento 
                 $x_0 \in \{x \in X; [f(x)]^2 > \alpha\}$ se, e somente se, $x_0 \in \{x \in X; f(x)> \sqrt{\alpha}\}$ ou \linebreak $x_0 \in \{x \in X; f(x)< -\sqrt{\alpha}\}$.
                 Com isso, 
+                \vspace{-0.4cm}
+                $$\left\{x \in X; [f(x)]^2 > \alpha\right\} = \left\{x \in X; f(x)> \sqrt{\alpha}\right\}\cup \left\{x \in X; f(x)< -\sqrt{\alpha}\right\}.$$
                 
-                $$\left\{x \in X; [f(x)]^2 > \alpha\right\} = \left\{x \in X; f(x)> \sqrt{\alpha}\right\}\cup \left\{x \in X; f(x)< -\sqrt{\alpha}\right\}$$
-                
+                \vspace{-0.4cm}
                 Como $f$ é $\cc$-mensurável por hipótese, temos que $\{x \in X; f(x)> \sqrt{\alpha}\} \in \mathcal{C}$ e \linebreak $\{x \in X; f(x)< -\sqrt{\alpha}\} \in \mathcal{C}$.
                 Desta forma, usando a definição de \sigal, obtemos que  $\{x \in X; f(x)> \sqrt{\alpha}\} \cup \{x \in X; f(x)< -\sqrt{\alpha}\} \in \mathcal{C}$. Consequentemente, 
                 $\{x \in X; [f(x)]^2 > \alpha\} \in \mathcal{C}$ acarretando a mensurabilidade de $f^2$.
             \end{enumerate}
-            
+        %
         \item Analogamente ao item anterior, se $\alpha < 0$, $\{x \in X; |f(x)| > \alpha\} = X$.
         Por outro lado, se $\alpha \geq 0$, vemos que 
         $\{x \in X; |f(x)| > \alpha\}=\{x \in X; f(x)> \alpha\} \cup \{x \in X; f(x)< -\alpha\}$.
@@ -516,27 +519,28 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
 
 % Exemplo de funções mensuráveis com aritmética
 Antes de provarmos a próxima proposição, vamos enunciar um teorema que nos auxiliará na próxima demonstração. 
-\begin{resultado}{Lema}
+\begin{env}{Lema}
 	\label{lem:densidade de Q em R}
 	O conjunto $\Q$ dos números racionais e o conjunto
 	$\R - \Q$ dos números irracionais são ambos densos em $\R$ (Elon, 2019, p.84).
-\end{resultado}
-
+	\vspace{-0.2cm}
+\end{env}
 A prova desse teorema será omitida para que o texto não prolongue-se mais do que o necessário.
-
-\begin{resultado}{Proposição}
+\begin{env}{Proposição}
 \label{prop:aritmetica-duas-funcoes}
     Sejam $f,g:X \to \R$. Se $f$ e $g$ são ambas $\cc$-mensuráveis, então as funções $f+g$ e $f\cdot g$ são também $\cc$-mensuráveis.
-\end{resultado}
-
+    \vspace{-0.2cm}
+\end{env}
 \begin{prova}
     Provaremos, primeiramente, que $f+g$ é $\cc$-mensurável.
     Ora, por hipótese, $f$ e $g$ são $\cc$-mensuráveis. 
     Assim, dado $r \in \Q$, os conjuntos $\{x \in X; f(x) > r\}$ e 
     $\{x \in X; g(x) > \alpha -r\}$ são ambos elementos de $\mathcal{C}$.
     Considere o conjunto  
-    
+    \vspace{-0.2cm}
     $$H_r = \{x \in X; f(x) > r\} \cap \{x \in X;\ g(x) > \alpha -r\}$$
+    
+    \vspace{-0.2cm}
     Isto é, o conjunto dos elementos $x \in X$ tal que $f(x) 
     > r$ e $g(x) >\alpha -r$ simultaneamente.
     Assim, afirmamos que $\{x \in X; (f+g)(x) > \alpha\} = \displaystyle \bigcup_{r \in \Q} H_r$. Com efeito, tomemos um elemento 
@@ -559,7 +563,7 @@ A prova desse teorema será omitida para que o texto não prolongue-se mais do q
     =
     (f(a) -r) + (g(a) -\alpha + r).
     $$ 
-    Pelo lema \ref{lem:densidade de Q em R}, podemos escolher um $r_0 \in \Q$ de modo que obtemos $f(a) - r_0 \approx \dfrac{b}{2}$ acarretando que $g(a) -\alpha + r_0 \approx \dfrac{b}{2}$.
+    Pelo \ref{lem:densidade de Q em R}, podemos escolher um $r_0 \in \Q$ de modo que obtemos $f(a) - r_0 \approx \dfrac{b}{2}$ acarretando que $g(a) -\alpha + r_0 \approx \dfrac{b}{2}$.
     Se $b > 0$, então $\dfrac{b}{2} > 0$.
     Segue que $f(a) - r_0 > 0 $ e $g(a) -\alpha + r_0 > 0$. 
     Consequentemente, $f(a) > r_0  $ e $g(a) > \alpha - r_0$.
@@ -569,14 +573,16 @@ A prova desse teorema será omitida para que o texto não prolongue-se mais do q
     Reciprocamente, sendo $a \in \bigcup_{r \in \Q} H_r$ existe um elemento $r_0 \in \Q$ tal que $a \in H_{r_0}$.
     Logo, $f(a) > r_0$ e $g(a) > \alpha -r_0$.
     Ao somarmos membro à membro temos
+    \vspace{-0.2cm}
     $$
     f(a) + g(a) > r_0 + \alpha -r_0
     \Rightarrow
-    (f + g)(a) > \alpha 
+    (f + g)(a) > \alpha. 
+    \vspace{-0.2cm}
     $$
     Com isso, $a \in \{x \in X; (f +g)(x) > \alpha\}$ como queríamos.
-    
     Concluindo que a afirmação é verdadeira. 
+    
     Além disso, para cada $r \in \Q$, o conjunto $H_r$ é um elemento de $\mathcal{C}$, pois é  a interseção de dois elementos de $\mathcal{C}$ (proposição \ref{prop:interseção-elementos-sigmas}).
     Note também que, pela definição de $\mathcal{C}$, a coleção $\displaystyle \bigcup_{r \in \Q} H_r$ é um elemento de $\mathcal{C}$, pois $\Q$ é enumerável
     \footnote{Em caso de dúvida, vide \supercite{elon}{p.51}.}.
@@ -584,39 +590,41 @@ A prova desse teorema será omitida para que o texto não prolongue-se mais do q
 
     Para mostrar que $fg$ é mensurável basta notar que é a combinação de outras funções $\cc$-mensuráveis.
     De fato, dado $x \in X$, temos
+    	\vspace{-0.2cm}
 	    \begin{align*}
 	        4(fg)(x) 
 	        =& \ 2(fg)(x) +  2(fg)(x)\\
 	        =& \ [f(x)]^2 - [f(x)]^2 + 2f(x)g(x) + [g(x)]^2 - [g(x)]^2 + 2f(x)g(x)\\
 	        =& \ \left([f(x)]^2 + 2f(x)g(x) + [g(x)]^2\right)  - \left([g(x)]^2 - 2f(x)g(x) + [f(x)]^2\right)\\
 	        =& \ (f(x) +g(x))^2 - (f(x) - g(x))^2\\
-	        =& \ [(f+g)(x)]^2 - [(f-g)(x)]^2.
-	    \end{align*}
+	        =& \ [(f+g)(x)]^2 - [(f-g)(x)]^2.    
+    	\end{align*}
+    \vspace{-0.2cm}
     Logo, $fg = \dfrac{1}{4}\left[(f+g)^2 - (f-g)^2\right]$.
-    Note que  $f-g$ é mensurável, pois sendo $g$ mensurável, podemos usar a proposição \ref{prop:aritmetica-uma-funcao} pondo $c= -1$.
-    Assim, temos $(-1)g = -g$. Logo, $-g$ é mensurável.
-    Além disso, pela parte \textit{(a)}, desta proposição, $f - g = f+ (-g)$.
+    Perceba que  $f-g$ é mensurável, pois sendo $g$ mensurável, podemos usar a \ref{prop:aritmetica-uma-funcao} pondo $c= -1$.
+    Assim, temos $(-1)g = -g$ acarretando que $-g$ é mensurável.
+    Além disso, pela parte \textit{(a)} desta proposição, $f - g = f+ (-g)$.
     Segue que $fg$ é $\cc$-mensurável.
 \end{prova}
-
-\begin{resultado}{Definição}
+\begin{env}{Definição}
 	\label{def:parte-positiva e negativa}
     Seja $f: X \to \R$ uma função real. Dizemos que a \textbf{parte positiva} da função $f$ é a função $f^+: X \to \R$ definida por $f^+(x) = \sup\{f(x), 0\}$.
-    Semelhantemente, chamamos de a \textbf{parte negativa} da função $f$, a função $f^-: X \to \R$ definida por $f^-(x) = \sup\{-f(x), 0\}$.
-    \footnote{Em caso de dúvidas sobre o supremo de um conjunto real, vide \supercite{elon}{p.75}.}
-\end{resultado}
+    Semelhantemente, chamamos de a \textbf{parte negativa} da função $f$, a função $f^-: X \to \R$ definida por $f^-(x) = \sup\{-f(x), 0\}$
+    \footnote{Em caso de dúvidas sobre o supremo de um conjunto real, vide \supercite{elon}{p.75}.}.
+\vspace{-0.2cm}\end{env}
 
 É possível  que a definição de parte positiva e negativa de funções fique um pouco abstrata em um primeiro contato. 
 Numa tentativa de esclarecer ao máximo, daremos o seguinte exemplo:
-\begin{resultado}{Exemplo}
+\begin{env}{Exemplo}
+	\label{ex:parte-positiva e negativa}
     Seja $f: \R^* \to \R$ definida por $f(x) =\dfrac{|x|}{x}$. 
     Então $f^+(x) = 1$ e $f^-(x) = -1$.
-\end{resultado}
+    De fato, ao tomarmos um elemento real $x< 0$, vemos que sua imagem $f(x) < 0$ sendo $f(x) = \dfrac{-x}{x} = -1$.
+    Se $x>0$, então $f(x) =\dfrac{x}{x} = 1$. 
+    Assim, $f^+(x) = \sup\{f(x), 0\} = 1$ enquanto que $f^-(x) = \sup\{-f(x), 0\} = -1$.
+\vspace{-0.2cm}\end{env}
 
-De fato, ao tomarmos um elemento real $x< 0$, vemos que sua imagem $f(x) < 0$ sendo $f(x) = \dfrac{-x}{x} = -1$.
-Se $x>0$, então $f(x) =\dfrac{x}{x} = 1$. 
-Assim, $f^+(x) = \sup\{f(x), 0\} = 1$ enquanto que $f^-(x) = \sup\{-f(x), 0\} = -1$.
-Neste caso, podemos perceber, ao olhar para a imagem \ref{fig: Gráfico da Função f(x) =|x|/x} a seguir que tanto a parte positiva quanto a parte negativa da função $f$ acima apresentada são ambas funções constantes.\\
+Neste caso, podemos perceber, ao olhar para a Figura \ref{fig: Gráfico da Função f(x) =|x|/x} que tanto a parte positiva quanto a parte negativa da função $f$, apresentada no \ref{ex:parte-positiva e negativa}, são ambas funções constantes.
 
     \begin{figure}[h!]
 	\centering
@@ -648,13 +656,11 @@ Neste caso, podemos perceber, ao olhar para a imagem \ref{fig: Gráfico da Funç
 	}	
     \end{figure}    
 
-Por serem constantes, já vimos que são mensuráveis.
-Mas e a função $f(x) =\dfrac{|x|}{x}$? Será que é mensurável?
-A resposta é sim e para mostrarmos isso precisaremos de alguns resultados auxiliares. 
-    \begin{lemma}
+Com isso, finalizaremos esta seção apresentando alguns resultados importantes sobre parte positiva e negativa de uma função.
+    \begin{env}{Lema}
     \label{lem:f = f^+ - f^-}
         Seja $f: X \to \R$ uma função real. Então $f = f^+ - f^-$ e $|f| = f^+ + f^-$.
-    \end{lemma}
+    \end{env}
     \begin{prova}
             Para provar que $f = f^+ - f^-$, devemos avaliar os casos de $f(x)$. 
             Logo, se $f(x) \geq 0$, então $f^+(x) = \sup\{f(x), 0\} = f(x)$ e $f^-(x) = \sup\{-f(x), 0\} = 0$, pois $f(x) \geq 0 \Rightarrow  - f(x) \leq~0$.
@@ -677,27 +683,30 @@ A resposta é sim e para mostrarmos isso precisaremos de alguns resultados auxil
             Portanto, $f^+ + f^- = |f|$.
     \end{prova}
 
-Observe que o lema \ref{lem:decomposicao-da-funcao-em-partes-positiva-negativa} nos dá a forma das funções $f^+$ e $f^-$ de maneira implicita.
-De fato, somando as duas expressões membro a membro vemos que 
+Observe que o \ref{lem:f = f^+ - f^-} nos dá a forma das funções $f^+$ e $f^-$ de maneira implícita.
+De fato, somando as duas expressões membro a membro vemos que
+\vspace{-0.2cm}
 $$f + |f| = (f^+ + f^+) - (f^- + f^-) = 2f^+$$
+
+\vspace{-0.2cm}
 Assim, podemos expressar $f^+ = \dfrac{|f| + f}{2}$.
 De modo semelhante, conseguimos subtrair membro a membro e obter a expressão $f^- = \dfrac{|f| - f}{2}$. 
 Isso demonstra o lema adiante:
-
-    \begin{lemma}
-    \label{prop:identidades-das-partes-das-funcoes}
-        Se $f: X \to \R$ é uma função real, então $f^+ = \dfrac{|f| + f}{2}$ e $f^- = \dfrac{|f| - f}{2}$.
-    \end{lemma}
-    \begin{resultado}{Teorema}
-        Uma função $f: X \to \R$ é $\cc$-mensurável se, e somente se, suas partes negativa e positiva são ambas $\cc$-mensuráveis. 
-    \end{resultado}
-
+\begin{env}{Lema}
+\label{lem:forma-explicita-partes-de-uma-funcao}
+    Se $f: X \to \R$ é uma função real, então $f^+ = \dfrac{|f| + f}{2}$ e $f^- = \dfrac{|f| - f}{2}$.
+    \vspace{-0.2cm}
+\end{env}
+\begin{env}{Teorema}
+    Uma função $f: X \to \R$ é $\cc$-mensurável se, e somente se, suas partes negativa e positiva são ambas $\cc$-mensuráveis. 
+    \vspace{-0.2cm}
+\end{env}
     \begin{prova}
         Suponha que $f$ seja $\cc$-mensurável.
-        Pela proposição \ref{prop:aritmetica-uma-funcao} vemos que a função $|f|$ é $\cc$-mensurável e pelo lema \ref{prop:identidades-das-partes-das-funcoes} as funções $f^+ = \dfrac{1}{2}(|f| + f)$ e $f^+ = \dfrac{1}{2}(|f| - f)$ também são $\cc$-mensuráveis.
-        Reciprocamente, supondo que $f^+$ e $f^-$ são mensuráveis, temos pelo lema \ref{lem:decomposicao-da-funcao-em-partes-positiva-negativa} que
+        Pela proposição \ref{prop:aritmetica-uma-funcao} vemos que a função $|f|$ é $\cc$-mensurável e pelo lema \ref{lem:forma-explicita-partes-de-uma-funcao} as funções $f^+ = \dfrac{1}{2}(|f| + f)$ e $f^+ = \dfrac{1}{2}(|f| - f)$ também são $\cc$-mensuráveis.
+        Reciprocamente, supondo que $f^+$ e $f^-$ são mensuráveis, temos pelo \ref{lem:f = f^+ - f^-} que
         $f = f^+ - f^-$. Segue, novamente pela proposição \ref{prop:aritmetica-duas-funcoes}, que $f$ é $\cc$-mensurável. 
     \end{prova}
 
-Uma vez que foram apresentadas as definições de \sigal\hspace{-0.1cm}, espaços mensuráveis e funções mensuráveis, nosso alicerce está totalmente consolidado para que possamos entender o que é uma medida sem muita dificuldade.
-Isso faremos na seção seguinte.
+Assim, se retornarmos à figura \ref{fig: Gráfico da Função f(x) =|x|/x}, vemos que a função do exemplos \ref{ex:parte-positiva e negativa} é $\cc$-mensurável, pois
+suas partes positiva e negativa são ambas funções constantes que são mensuráveis conforme a \ref{prop:aritmetica-uma-funcao}.
